--- a/SIGTR/users/templates/users/vistaInicial.html
+++ b/SIGTR/users/templates/users/vistaInicial.html
@@ -230,9 +230,9 @@
     <script src="{% static 'dashboard/js/clientes/inicio.js' %}"></script>
     <script src="{% static 'dashboard/js/clientes/recomendaciones.js' %}"></script>
     <script src="{% static 'dashboard/js/clientes/centroAprendizaje.js' %}"></script>
-    <script
+    <!-- <script
     src="https://maps.googleapis.com/maps/api/js?key={{ google_api_key }}&libraries=marker&callback=initMap"
-    async defer></script> 
+    async defer></script> --> 
 
 </body>
 
