Chat de voz creado

--- a/SIGTR/dashboard/templates/dashboard/client/inicio.html
+++ b/SIGTR/dashboard/templates/dashboard/client/inicio.html
@@ -112,7 +112,6 @@
                             <h1>ICASOFT IA</h1>
                         </div>
                         <div class="body-chat" id="body-chat">
-                            <!-- Se eliminan los mensajes por defecto -->
                         </div>
                         <div class="footer-chat" id="footer-chat">
                             <div class="contentFooter">
@@ -225,6 +224,8 @@
         }
     </script>
     <script src="https://kit.fontawesome.com/233c0f00ee.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/annyang/2.6.1/annyang.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/annyang/2.6.1/annyang.min.js"></script>
     <script src="{% static 'dashboard/js/clientes/inicio.js' %}"></script>
     <script src="{% static 'dashboard/js/clientes/mapa.js' %}"></script> 
     <script src="{% static 'dashboard/js/clientes/monitoreo.js' %}"></script>
@@ -237,6 +238,8 @@
     <script src="{% static 'dashboard/js/clientes/recomendaciones.js' %}"></script>
     <script src="{% static 'dashboard/js/clientes/red.js' %}"></script>
     <script src="{% static 'dashboard/js/clientes/chat.js' %}"></script>
+        <script src="{% static 'dashboard/js/clientes/speech.js' %}"></script>
+
     <!--<script
     src="https://maps.googleapis.com/maps/api/js?key={{ google_api_key }}&libraries=marker&callback=initMap"
     async defer></script>-->
