--- a/SIGTR/dashboard/templates/dashboard/client/inicio.html
+++ b/SIGTR/dashboard/templates/dashboard/client/inicio.html
@@ -82,7 +82,6 @@
                         </div>
                     </div>
                     <div class="botonesSoporte">
-                        <!-- <button class="botResp" id="btnRespRest">RESPALDO Y RESTAURACIÓN</button> -->
                         <button class="botCentro" id="btnCentro">CENTRO DE APRENDIZAJES</button>
                     </div>
                 </div>
@@ -237,9 +236,8 @@
     <script src="{% static 'dashboard/js/clientes/recomendaciones.js' %}"></script>
     <script src="{% static 'dashboard/js/clientes/red.js' %}"></script>
     <script src="{% static 'dashboard/js/clientes/chat.js' %}"></script>
-    <!--<script
-    src="https://maps.googleapis.com/maps/api/js?key={{ google_api_key }}&libraries=marker&callback=initMap"
-    async defer></script>-->
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key={{ google_api_key }}&libraries=marker,geometry&callback=initMap"
+    async defer></script> -->
 </body>
 
 </html>
