--- a/SIGTR/dashboard/static/dashboard/css/modalInicio.css
+++ b/SIGTR/dashboard/static/dashboard/css/modalInicio.css
@@ -72,7 +72,9 @@
     margin-bottom: 20px;
     position: relative;
 }
-
+.headerModal .textHW{
+    font-size: x-large;
+}
 .close {
     position: absolute;
     right: 10px;
@@ -1250,11 +1252,6 @@ div#cpu-name {
         width: 95%;
         padding: 15px;
     }
-
-    .textHW {
-        font-size: 20px;
-    }
-
     .textComponente,
     .resultComponente {
         font-size: 16px;
@@ -1834,16 +1831,6 @@ div#cpu-name {
     text-align: center;
     align-items: center;
 }
-
-#modalMantenimiento .headerModal .textHW {
-    font-size: xx-large;
-}
-
-#modalMantenimiento .textHW {
-    font-size: x-large;
-}
-
-#modalMantenimiento .contentCardData {}
 
 #cardData1,
 #cardData2,
@@ -2949,128 +2936,6 @@ iframe.videoYt {
     .red-resultados-grid {
         grid-template-columns: 1fr;
     }
-}
-
-
-
-
-/*MODAL ASISTENCIA TÉCNICA*/
-#modalAsistencia .modal-content {
-    display: grid;
-    grid-template-areas: "headerModal" "contentData";
-    grid-template-rows: 10% auto;
-    gap: 10px;
-}
-
-#modalAsistencia .contentData #formAsistencia {
-    display: grid;
-    grid-template-areas: "asistencia1" "asistencia1" "asistencia2" "asistencia4" "asistencia5";
-    gap: 15px;
-}
-
-.asistencia1 {
-    display: grid;
-    grid-template-areas: "textDescrip" "inputDescrip";
-    gap: 10px;
-}
-
-.asistencia2 {
-    display: grid;
-    grid-template-areas: "textDescrip inputDescrip";
-    grid-template-columns: auto 65%;
-}
-
-.asistencia2 .inputDescrip {
-    width: 100%;
-}
-.asistencia5{
-    display: grid;
-    grid-template-areas: 'botones botones';
-    grid-template-columns: 50%;
-    gap: 10px;
-}
-.asistencia5 #contactRef {
-    display: grid;
-    width: 100%;
-    justify-items: center;
-}
-a.btnAsistencia {
-    display: flex;
-    gap: 10px;
-    text-decoration: none;
-    justify-content: center;
-}
-#contentDireccion .inputDescrip {
-    width: 100%;
-    height: 40px;
-    display: grid;
-    grid-template-areas: "textAsistencia btnUbiCliente";
-    grid-template-columns: 80% auto;
-    border-radius: 30px;
-    box-shadow: 5px 10px 10px -8px rgb(3, 101, 140);
-}
-
-#contentDireccion .textAsistencia {
-    border-top-left-radius: 30px;
-    border-bottom-left-radius: 30px;
-    padding-left: 10px;
-}
-input#descripcion {
-    height: 40px;
-    padding-left: 10px;
-}
-
-.btnUbiCliente {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    border-top-right-radius: 30px;
-    border-bottom-right-radius: 30px;
-    justify-content: center;
-    background-color: rgb(3 140 99);
-    color: white;
-    cursor: pointer;
-}
-
-.textDescrip {
-    font-size: 20px;
-    display: grid;
-    align-items: center;
-}
-
-#problemaDescript .textAsistencia {
-    width: 100%;
-    border-radius: 30px;
-    box-shadow: 5px 10px 10px -8px rgb(3, 101, 140);
-}
-
-.selectTecnico {
-    border-radius: 30px;
-    height: 30px;
-    width: 100%;
-    box-shadow: 5px 10px 10px -8px rgb(3, 101, 140);
-}
-
-/*.selectTecnico {
-        border: 2px solid rgb(42, 76, 89);
-        background: linear-gradient(180deg, rgb(54, 56, 57), rgb(38, 40, 40));
-        box-shadow: 5px 10px 10px -8px;
-        border-radius: 30px;
-        color: rgb(3, 101, 140);
-        text-align: center;
-        align-content: center;
-        font-family: "Segoe UI";
-        font-weight: 800;
-        font-size: 18px;
-        width: 100%;
-        height: 50px;
-}*/
-.asistencia4 {}
-
-#mapAsistencia {
-    border-radius: 20px;
-    width: 100%;
-    height: 150px;
 }
 
 @media (max-width: 480px) {
