--- a/SIGTR/dashboard/static/dashboard/css/admin/apartados.css
+++ b/SIGTR/dashboard/static/dashboard/css/admin/apartados.css
@@ -1,13 +1,17 @@
-:root{
-    --relleno-color: linear-gradient(135deg, #070F25 0%, #0B2A3F 50%, #03658C 100%);/*linear-gradient(135deg, #070F25, #1C1E35, #03658C, #104E5E); rojizo: #411437, plomito:#303247*/
+:root {
+    --relleno-color: linear-gradient(135deg, #070F25 0%, #0B2A3F 50%, #03658C 100%);
+    /*linear-gradient(135deg, #070F25, #1C1E35, #03658C, #104E5E); rojizo: #411437, plomito:#303247*/
 }
-body{
-    background:#070F25;
+
+body {
+    background: #070F25;
 }
+
 #content {
     margin-left: 250px;
     background: #070F25;
 }
+
 #sidebar {
     width: 250px;
     position: fixed;
@@ -18,7 +22,7 @@ body{
 }
 
 /*parte superior*/
-#header-dashboard{
+#header-dashboard {
     color: white;
     font-size: x-large;
 }
@@ -29,11 +33,13 @@ body{
 }
 
 /*tecnico*/
-#read_tecnico, #read_client{
+#read_tecnico,
+#read_client {
     background: #0b2a3f92;
-    color:white;
+    color: white;
 }
-.table > thead > tr > th {
+
+.table>thead>tr>th {
     background-color: #193c4b !important;
     color: white !important;
     text-align: center;
@@ -44,30 +50,56 @@ body{
     background: linear-gradient(to right, #135472, #217399, #1a3944) !important;
     color: white !important;
 }
+
 table.table tbody td {
     text-align: center !important;
 }
-button.accionTecnico{
+
+button.accionTecnico {
     padding: 0px;
+}
+button.accionTecnicoAdd {
+    padding: 5px;
+    border-radius: 8px;
+    padding-left: 15px;
+    padding-right: 15px;
+    color: white;
+    background: linear-gradient(65deg, #105d14, #4CAF50, #449247);
+}
+.inputSearch{
+    border-top-right-radius: 0px !important;
+    border-bottom-right-radius: 0px !important;
 }
 .iaccionTecnico {
     font-size: 30px;
 }
-#newTech, #newClient{
-  background: linear-gradient(65deg, #105d14, #4CAF50, #449247);
+.addSearch {
+    display: flex;
+    justify-content: space-between;
+}
+.searchTech {
+    background: #1f6e93;
+    color: white;
+    border: none;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+#editTech,
+#editClient {
+    background: linear-gradient(65deg, #7a6b06, #cda110, #927f44);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-#editTech, #editClient{
-  background: linear-gradient(65deg, #7a6b06, #cda110, #927f44);
+
+#deleteTech,
+#deleteClient {
+    background: linear-gradient(65deg, #5d1010, #a71818, #853c3c);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-#deleteTech, #deleteClient{
-  background: linear-gradient(65deg, #5d1010, #a71818, #853c3c);
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
+
