--- a/SIGTR/dashboard/templates/dashboard/base_dashboard.html
+++ b/SIGTR/dashboard/templates/dashboard/base_dashboard.html
@@ -215,11 +215,13 @@
 
     <!-- SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
+    
     <!-- Footer Scripts -->
     {% if request.user.role == 'admin' %}
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="{% static 'dashboard/js/admin_dashboard.js' %}" defer></script>
+    <script src="{% static 'dashboard/js/admin/cliente.js' %}"></script>
+    <script src="{% static 'dashboard/js/admin/tecnico.js' %}"></script>
     {% elif request.user.role == 'client' %}
     <script src="{% static 'dashboard/js/client_dashboard.js' %}" defer></script>
     {% elif request.user.role == 'tech' %}
